# bluez-tools

./: .gitignore  AUTHORS  Makefile.am  README  TODO.txt  configure.ac
contrib/: agent.xml  build-mans.sh  gen-dbus-gobject.pl  generate-all.sh  generate-bluez-gobjects.sh  generate-obexd-gobjects.sh  generate-ods-gobjects.sh  obex-data-server-api-0.4.5-fixed.txt  obexAgent.xml
contrib/bluez-api-4.66-fixed/: adapter-api.txt  audio-api.txt  device-api.txt  network-api.txt
contrib/bluez-api-4.69-fixed/: adapter-api.txt  device-api.txt
contrib/bluez-api-4.75-fixed/: adapter-api.txt  control-api.txt  device-api.txt
contrib/bluez-api-4.96-fixed/: adapter-api.txt  audio-api.txt  device-api.txt
contrib/man/: bt-adapter.pod  bt-agent.pod  bt-audio.pod  bt-device.pod  bt-input.pod  bt-monitor.pod  bt-network.pod  bt-obex.pod  bt-serial.pod
contrib/obexd-api-0.29-fixed/: agent-api.txt  client-api.txt
contrib/obexd-api-0.30-fixed/: agent-api.txt  agent.xml
contrib/obexd-api-0.34-fixed/: client-api.txt  obexd-api.txt
contrib/ods-api-0.4.5-fixed/: obex-data-server-api-0.4.5-fixed.txt
doc/: Makefile.am  bluez-tools.txt  bttools-v3_pub.txt
lib/: dbus-common.c  dbus-common.h  manager.h
src/: Makefile.am  bt-adapter.1  bt-adapter.c  bt-agent.1  bt-agent.c  bt-audio.1  bt-audio.c  bt-device.1  bt-device.c  bt-input.1  bt-input.c  bt-monitor.1  bt-monitor.c  bt-network.1  bt-network.c  bt-obex.1  bt-obex.c  bt-serial.1  bt-serial.c  monitor.c
src/lib/: adapter.c  adapter.h  agent-helper.c  agent-helper.h  agent.c  agent.h  audio.c  audio.h  bluez-api.h  bluez-dbus.h  dbus-common.c  dbus-common.h  device.c  device.h  helpers.c  helpers.h  hub.c  hub.h  input.c  input.h  manager.c  manager.h  marshallers.c  marshallers.h  marshallers.list  network.c  network.h  network_hub.c  network_hub.h  network_peer.c  network_peer.h  network_router.c  network_router.h  obex_agent.c  obex_agent.h  obexagent.c  obexagent.h  obexclient.c  obexclient.h  obexclient_file_transfer.c  (+24 more)
src/lib/bluez/: adapter.c  adapter.h  agent.c  agent.h  audio.c  audio.h  device.c  device.h  input.c  input.h  manager.c  manager.h  network.c  network.h  network_server.c  network_server.h  serial.c  serial.h
src/lib/bluez/obex/: obex_client.c  obex_file_transfer.c
src/lib/obexd/: obexagent.c  obexagent.h  obexclient.c  obexclient.h  obexclient_file_transfer.c  obexclient_file_transfer.h  obexclient_session.c  obexclient_session.h  obexclient_transfer.c  obexclient_transfer.h  obexmanager.c  obexmanager.h  obexsession.c  obexsession.h  obextransfer.c  obextransfer.h
src/lib/ods/: obexmanager.c  obexmanager.h  obexserver.c  obexserver.h  obexserver_session.c  obexserver_session.h  obexsession.c  obexsession.h
